FIXED: [ 365105 ] Workaround for bug in KF5+QSystemTrayIcon

BUG: 365105